--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "electron-quick-start-typescript",
   "version": "1.0.0",
   "description": "A minimal Electron application written with Typescript",
+  "main": "./dist/main.js",
   "scripts": {
     "build": "tsc",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "npm run build && electron ./dist/main.js",
+    "pack:l": "electron-packager . --overwrite --platform=linux --arch=x64 --out=out"
   },
   "repository": "https://github.com/electron/electron-quick-start-typescript",
   "keywords": [
@@ -20,7 +22,14 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^1.7.8",
+    "electron-packager": "^10.1.0",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3"
+  },
+  "dependencies": {
+    "electron-store": "^1.3.0",
+    "hexo": "^3.2.0",
+    "jquery": "^3.2.1",
+    "node-static": "^0.7.10"
   }
 }
